add old ext-mongo for php-fpm

--- a/php-fpm/Dockerfile-56
+++ b/php-fpm/Dockerfile-56
@@ -104,6 +104,17 @@ RUN if [ ${INSTALL_SWOOLE} = true ]; then \
 ;fi
 
 #####################################
+# Mongo (old):
+#####################################
+
+ARG INSTALL_MONGO_OLD=false
+RUN if [ ${INSTALL_MONGO_OLD} = true ]; then \
+    # Install the mongo extension
+    pecl install mongo && \
+    docker-php-ext-enable mongo \
+;fi
+
+#####################################
 # MongoDB:
 #####################################
 
