--- a/workspace/Dockerfile-56
+++ b/workspace/Dockerfile-56
@@ -195,6 +195,20 @@ RUN if [ ${INSTALL_MONGO} = true ]; then \
 ;fi
 
 #####################################
+# Mongo (old):
+#####################################
+
+# Check if Mongo needs to be installed
+ARG INSTALL_MONGO_OLD=false
+ENV INSTALL_MONGO_OLD ${INSTALL_MONGO_OLD}
+RUN if [ ${INSTALL_MONGO_OLD} = true ]; then \
+    # Install the mongo extension
+    pecl install mongo && \
+    echo "extension=mongo.so" >> /etc/php/5.6/mods-available/mongo.ini && \
+    ln -s /etc/php/5.6/mods-available/mongo.ini /etc/php/5.6/cli/conf.d/30-mongo.ini \
+;fi
+
+#####################################
 # Drush:
 #####################################
 USER root
